# Charm

./: CMakeLists.txt
Charm/: Application.cpp  Application.h  CMakeLists.txt  Charm.cpp  CharmPreferences.h  CharmWindow.h  ConfigurationDialog.h  EnterVacationDialog.h  EventModelAdapter.h  EventModelFilter.h  EventView.h  EventWindow.h  MacApplication.h  ModelConnector.h  SelectTaskDialog.h  TaskIdDialog.h  TaskModelAdapter.h  TasksView.cpp  TasksView.h  TasksViewDelegate.h  TasksWindow.h  ViewFilter.h
Charm/Commands/: CommandDeleteEvent.h  CommandMakeEvent.h  CommandModifyEvent.h
Charm/HttpClient/: GetProjectCodesJob.h  HttpJob.h  UploadTimesheetJob.h
Charm/Idle/: X11IdleDetector.h
Charm/Qocoa/: qsearchfield.h
Charm/Redmine/: Backend.cpp  Backend.h  RedmineBackend.cmake
Charm/Reports/: ActivityReport.h  CharmReport.h  MonthlyTimesheetConfigurationDialog.h  ReportPreviewWindow.h  WeeklyTimesheet.h
Charm/TimeTrackingView/: BillDialog.h  TimeTrackingTaskSelector.h  TimeTrackingView.h  TimeTrackingWindow.cpp  TimeTrackingWindow.h
Core/: CMakeLists.txt  CharmCommand.h  CharmConstants.cpp  CharmDataModel.cpp  CharmDataModel.h  Configuration.cpp  Controller.h  Event.cpp  MySqlStorage.h  RedmineConnector.cpp  RedmineConnector.h  SmartNameCache.cpp  Task.cpp  TimeSpans.h
Core/Logging/: Facility.cpp  Facility.h  Locations.cpp  Locations.h  Macros.h
Core/Redmine/: CurrentUserRetriever.cpp  CurrentUserRetriever.h  IssueStatus.cpp  IssueStatus.h  IssuesRetriever.cpp  IssuesRetriever.h  ModelDownloader.cpp  ProjectsRetriever.cpp  ProjectsRetriever.h  RedmineConfiguration.cpp  RedmineConfiguration.h  RedmineConnector.cpp  RedmineConnector.h  RedmineIssue.cpp  RedmineIssue.h  RedmineModel.cpp  RedmineModel.h  RedmineParser.cpp  RedmineParser.h  RedmineProject.cpp  RedmineProject.h  RedmineRetriever.cpp  RedmineRetriever.h  RedmineTaskListProvider.cpp  RedmineTaskListProvider.h  RedmineUsersRetriever.cpp  RedmineUsersRetriever.h  Status.cpp  StatusRetriever.cpp  StatusRetriever.h  WindowRetriever.cpp  WindowRetriever.h
Tests/: BackendIntegrationTests.h  CMakeLists.txt  CharmDataModelTests.h  ControllerTests.h  DatesTests.h  ImportExportTests.h  RedmineConnectorTests.cpp  RedmineNetworkingTests.cpp  SmartNameCacheTests.h  SqLiteStorageTests.h  SqlTransactionTests.h  TaskStructureTests.cpp  TaskStructureTests.h  TestData.qrc  TimeSpanTests.h  XmlSerializationTests.h
Tests/Data/RedmineConnector/: Sample18Projects.json  Sample3Issues.json  SampleIssue271.json  SampleIssueStatuses.json
